Fixed footer Z-Index

--- a/src/css/core/footer.module.css
+++ b/src/css/core/footer.module.css
@@ -5,6 +5,7 @@
     margin-top: 10vh;
     margin-bottom: 0;
     z-index: 255;
+    position: relative;
 }
 
 .footer {
